--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     </head>
     <body>
-
-        <canvas id="firework"></canvas>
+        <canvas></canvas>
 
         <script type="text/javascript" src="./js/app.js"></script>
     </body>
